--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     background-size: cover;  
     background-position: center;  
     background-repeat: no-repeat; 
+    margin-bottom: 0%;
 }
 
 #center {
