--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-size: cover;  
     background-position: center;  
     background-repeat: no-repeat; 
-    margin-bottom: 0%;
+    margin-bottom: 10px;
 }
 
 #center {
