--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body{
   
   h1 {
     margin-top: 0px;
+     margin-bottom: 0px;
     font-family: "Jaro", serif;
     font-optical-sizing: auto;
     font-weight: 400;
